# bencodex-rs

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  lint.yaml  publish.yaml  test.yaml
.zed/: settings.json
bencodex/: Cargo.toml
bencodex/src/: main.rs
cli/src/: main.rs
src/: lib.rs  main.rs
src/bencodex/codec/: decode.rs  encode.rs  mod.rs  types.rs
src/codec/: decode.rs  encode.rs  types.rs
src/json/: decode.rs  encode.rs  mod.rs
src/tests/codec/: decode.rs  encode.rs  mod.rs  utils.rs
tests/: mod.rs
tests/codec/: decode.rs  encode.rs  utils.rs
tests/json/: decode.rs  encode.rs
