[package]
name = "bencodex"
version = "0.0.1"
authors = ["moreal <dev.moreal@gmail.com>"]
edition = "2018"
description = "The Rust implementation of Bencodex"
license = "MIT"
keywords = ["bencodex", "encoding", "decoding"]
homepage = "https://github.com/moreal/bencodex-rs"
repository = "https://github.com/moreal/bencodex-rs"
documentation = "https://docs.rs/crate/bencodex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
num-traits = "0.2.14"
num-bigint = "0.3"
yaml-rust = "0.4.4"
base64 = "0.13.0"
