[package]
name = "bencodex-rs"
version = "0.4.0"
authors = ["moreal <dev.moreal@gmail.com>"]
edition = "2018"
description = "The Rust implementation of Bencodex"
license = "MIT"
keywords = ["bencodex", "encoding", "decoding"]
homepage = "https://github.com/moreal/bencodex-rs"
repository = "https://github.com/moreal/bencodex-rs"
documentation = "https://docs.rs/crate/bencodex-rs"

[lib]
name = "bencodex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
num-traits = "0.2.14"
num-bigint = "0.3"
hex = "0.4.3"

[dev-dependencies]
yaml-rust = "0.4.4"
base64 = "0.13.0"
syn = "1.0"
quote = "1.0"

[workspace]
members = ["cli"]
