[package]
name = "bencodex-rs"
version = "0.5.0"
authors = ["moreal <dev.moreal@gmail.com>"]
edition = "2021"
description = "The Rust implementation of Bencodex"
license = "MIT"
keywords = ["bencodex", "encoding", "decoding"]
homepage = "https://github.com/moreal/bencodex-rs"
repository = "https://github.com/moreal/bencodex-rs"
documentation = "https://docs.rs/crate/bencodex-rs"

[lib]
name = "bencodex"
path = "src/lib.rs"

[[bin]]
name = "bencodex"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
num-traits = "0.2.19"
num-bigint = "0.4.6"
hex = "0.4.3"
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }

[dev-dependencies]
yaml-rust = "0.4.5"
syn = "2.0.68"
quote = "1.0.36"
serde_json = "1.0"
